Thread layout: first message is no longer sticky, fixed some spacing issues

--- a/src/styles/MessageList.scss
+++ b/src/styles/MessageList.scss
@@ -14,6 +14,7 @@
 
   &--thread {
     padding: 15px 0 0 0;
+    overflow: visible;
   }
   &__center {
     width: 100%;
